Alignment/scaling fixes

--- a/css/settings.css
+++ b/css/settings.css
@@ -1,18 +1,18 @@
 @font-face{font-family: "Conduit ITC"; src: url("../fonts/Conduit-ITC.woff");}
-html{font-family: "Conduit ITC", sans-serif; color: white; font-size: 14pt;}
-input, select {float: right; right: 0; position: absolute; height: 17px; margin-right: 20px; width: 200px; margin-top: 2px;}
+html{font-family: "Conduit ITC", sans-serif; color: white; font-size: 18pt;}
+input, select {float: right; right: 0; position: absolute; height: 22px; margin-right: 20px; width: 250px; margin-top: 2px; font-size: 13pt;}
 label { float: left; }
 .tabs { list-style: none; }
 .tabs li { display: inline; }
 .tabs li a { color: white; float: left; display: block; padding: 4px 10px; margin-left: -1px; position: relative; left: 1px; background: #31415b; text-decoration: none; }
 .tabs li a:hover { background: #404f70; } 
 .group { margin-bottom: 0px;}
-.tabbed-area { margin: 0 0 120px 0; }
-.box-wrap { position: relative; min-height: 400px; }
-.tabbed-area div div { background: #31415b; padding: 20px; min-height: 400px; position: absolute; top: -1px; left: 0; width: 470px; }
-.tabbed-area div div, .tabs li a { border: 1px solid #05152f; }
-.adjacent { position: relative; margin-top: 40px; min-height: 400px; margin-bottom: 0px;}
-.adjacent div { border: 1px solid #05152f; background: #31415b; padding: 20px; min-height: 400px; position: absolute; top: -1px; left: 0; width: 470px; }
+.tabbed-area { margin: 0 0 140px 0; }
+.box-wrap { position: relative; min-height: 500px; }
+.tabbed-area div div { background: #31415b; padding: 20px; min-height: 500px; position: absolute; top: -2px; left: 0; width: 550px; }
+.tabbed-area div div, .tabs li a { border: 1px solid black; }
+.adjacent { position: relative; margin-top: 40px; min-height: 500px; margin-bottom: 0px; opacity: 0.8;}
+.adjacent div { border: 1px solid black; padding: 20px; min-height: 500px; position: absolute; top: -1px; left: 0; width: 550px; }
 .adjacent .tabs { position: absolute; bottom: 100%; left: 0; z-index: 2; }
 .adjacent .tabs li a { background: -moz-linear-gradient(top, #404f70, #eee); }
 #playerSettings:target,
@@ -25,5 +25,5 @@ label { float: left; }
 }
 #colorsPrimary::-webkit-color-swatch-wrapper, #colorsSecondary::-webkit-color-swatch-wrapper, #colorsVisor::-webkit-color-swatch-wrapper, #colorsLights::-webkit-color-swatch-wrapper, #colorsHolo::-webkit-color-swatch-wrapper{ padding: 0;}
 #colorsPrimary::-webkit-color-swatch, #colorsSecondary::-webkit-color-swatch, #colorsVisor::-webkit-color-swatch, #colorsLights::-webkit-color-swatch, #colorsHolo::-webkit-color-swatch{border: 0;}
-#settingsWindow{position: absolute; left: 130px; bottom: 100px;}
-#closeButton{position: absolute; bottom: 10px; right: 10px; z-index: 10; width: 150px; height: 50px;}
+#settingsWindow{position: absolute; right: 650px; top: 46%;}
+#closeButton{position: absolute; bottom: 15px; left: 60px; z-index: 10; width: 187px; height: 60px; color: white; border: 1px solid white; background-color: black; opacity: 1; font-size: 13pt;}
